# QASL_NER

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  logging.conf  pyproject.toml  requirements.txt
run/: args.py  globals.py  run_ner.py
run/configs/: config.json  genia_config.json  genia_mrc_config.json  twlife_config.json  twlife_mrc_config.json
utils/data_loading_script/: load_dataset_genia.py  load_dataset_twlife.py
utils/data_preprocess/: base.py  parse_genia.py
utils/data_structure/: feature.py  mrc.py  stat.py  tag_scheme.py
utils/evaluation/: evaluation.py
utils/feature_generation/: feature_generation.py  load_dataset_genia.py  strategy.py
utils/feature_generation/script/: load_dataset_genia.py
