[tool.poetry]
name = "qasl_ner"
version = "0.1.0"
description = ""
authors = ["Yu-Lun Chiang <chiangyulun0914@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
xlrd = "^1.2.0"
openpyxl = "^3.0.4"
torch = "^1.6.0"
torchtext = "^0.9.0"
transformers = "^4.3.0"
seqeval = "^1.2.2"
gunicorn = "^20.0.4"
autopep8 = "^1.5.3"
Flask = "^1.1.2"
pytest = "^5.3.2"
pytest-mock = "^3.0.0"
pytest-cov = "^2.8.1"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
